LFA/Projeto/geometrics-lfa-07-master/examples/geometricsaux_tests/semantic_errors/semantic_error_2.geom
geometrics: database

/* Should fail -> ShapeLineError: f5 not defined */
f5 is {
    point p7 (7,7)
    line l7 p7 f5
} 